--- a/.htaccess
+++ b/.htaccess
@@ -1,3 +1,9 @@
+RewriteEngine on
+
+RewriteCond %{REQUEST_FILENAME} !-f
+
+RewriteRule .* index.php?uri=$0 [QSA]
+
 <FilesMatch "\.(php)$">
 	Deny from all
 </FilesMatch>
